# devreact

./: .gitignore  .profile  .zenodo.json  README.md  pyproject.toml  setup.cfg
jupyter/: check_pdf_dual.ipynb  check_pdf_separate.ipynb  check_pdf_single.ipynb  check_recovery_dual.ipynb  check_recovery_separate.ipynb  check_recovery_single.ipynb  plot_fit_neural_dual.ipynb  plot_fit_neural_dual6.ipynb  plot_fit_neural_dual7.ipynb  plot_param_neural_dual5.ipynb  plot_param_neural_dual6.ipynb  plot_param_neural_dual7.ipynb  test_kidrep.ipynb  test_pdf_3afc.ipynb  test_pdf_3afc_bin.ipynb  test_pdf_3afc_dual.ipynb  test_pdf_3afc_single.ipynb  test_recovery_3afc_bin.ipynb  test_recovery_3afc_dual.ipynb  test_recovery_3afc_single.ipynb
src/devreact/: __init__.py  figures.py  model.py  rt.py  task.py
src/devreact/data/: figures.mplstyle
