[project]
name = "devreact"
description = "DevReact: Modeling of developmental changes in memory-based decision making"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
authors = [
    {name = "Neal W Morton", email = "mortonne@gmail.com"},
]
keywords = ["psychology", "response time", "decision making", "memory"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]
urls = {project = "https://github.com/prestonlab/devreact"}
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.6",
    "pymc>=5.28.3",
    "scipy-stubs~=1.17.1",
    "seaborn>=0.13.2",
    "watermark>=2.6.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
