[metadata]
name = devreact
version = 0.1.0
url = https://github.com/prestonlab/devreact
author = Neal Morton
author_email = mortonne@gmail.com
description = DevReact: Modeling of developmental changes in reaction time
long_description = file: README.md
long_description_content_type = text/markdown
keywords = modeling, memory, fMRI, developmental
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    seaborn
    pingouin
    watermark
    arviz
    pymc3
    psireact
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
